<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/AEC5EB"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bab3" />

        <Button
            android:id="@+id/btn_Notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="200dp"
            android:layout_marginTop="25dp"
            android:background="@color/cFFCAD4"
            android:text="@string/btn_One"
            android:textColor="@color/cAF3B6E" />

        <Button
            android:id="@+id/btn_Shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@color/cFFCAD4"
            android:text="@string/btn_Two"
            android:textColor="@color/cAF3B6E" />

        <Button
            android:id="@+id/btn_Resrc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="200dp"
            android:layout_marginTop="25dp"
            android:background="@color/cFFCAD4"
            android:text="@string/btn_Three"
            android:textColor="@color/cAF3B6E" />

        <Button
            android:id="@+id/btn_Service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@color/cFFCAD4"
            android:text="@string/btn_Four"
            android:textColor="@color/cAF3B6E" />

        <Button
            android:id="@+id/btn_SrvcArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="200dp"
            android:layout_marginTop="25dp"
            android:background="@color/cFFCAD4"
            android:text="@string/btn_Five"
            android:textColor="@color/cAF3B6E" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>